// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bar.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

export var x = "hello"

=====================================output=====================================
// @flow

export var x = "hello";

================================================================================
`;

exports[`foo.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

import {x} from './bar';
(x: string);

=====================================output=====================================
// @flow

import { x } from "./bar";
(x: string);

================================================================================
`;
